CSS Work in progress

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     <header>
       <div class="header">
         <img src="img/train.png" alt="logo">
+        <ul class="link">
+          <li><a href="#">Ticket</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Maps</a></li>
+          <li><a href="#">Information</a></li>
+        </ul>
         <h1>Train Ticket</h1>
       </div>
     </header>
@@ -90,8 +96,8 @@
         </div>
 
         <div class="countdown-card">
-          <h3> il tuo Ultimo Accesso </h3>
-          <h3 id="countDown"></h3>
+          <h4> il tuo Ultimo Accesso </h4>
+          <h4 id="countDown"></h4>
         </div>
 
       </div>
