Js - classList(add) and CSS

--- a/index.html
+++ b/index.html
@@ -59,14 +59,15 @@
                 <option value="Over65">Over 65</option>
                 <option value="Under18">Under 18</option>
               </select>
+            </div>
 
-              <button id="btnCreate" type="button" name="ticketCreator">Crea Ticket</button>
-              <button id="btnClear" type="button" name="button">Cancella Dati</button>
-
+            <div class="btnContainer">
+              <button id="btnCreate" type="button" name="ticketCreator">Ticket</button>
+              <button id="btnClear" type="button" name="button">Delete</button>
             </div>
           </div>
 
-          <div class="table" >
+          <div id="dateTable" class="table bgWhite">
             <table id="toShow" class="hidden">
               <thead>
                 <tr>
